# thingwire

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  safety_config.yaml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_support.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  cli-reference.md  getting-started.md  safety.md  wot-td-guide.md
examples/demo-motion-alert/: README.md  agent-script.py  device-td.json
examples/demo-temperature-relay/: README.md  agent-script.py  device-td.json
firmware/: device.yaml  platformio.ini
firmware/src/: actuator_controller.cpp  actuator_controller.h  config.h  main.cpp  mqtt_client.cpp  mqtt_client.h  sensor_registry.cpp  sensor_registry.h  wifi_manager.cpp  wifi_manager.h  wot_td_generator.cpp  wot_td_generator.h
gateway/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
gateway/gateway/: __init__.py  __main__.py  audit_log.py  config.py  mcp_server.py  mqtt_bridge.py  safety.py  td_loader.py  tool_compiler.py
gateway/tests/: conftest.py  test_audit_log.py  test_integration.py  test_mqtt_bridge.py  test_safety.py  test_td_loader.py  test_tool_compiler.py
npm/: index.js  package.json
scripts/: virtual_device.py
src/thingwire/: __init__.py  cli.py  (+9 more)
td-library/: README.md  bme280.json  dht22-relay.json  pir-motion.json  rgb-led-strip.json  servo-motor.json  soil-moisture.json
tests/: conftest.py  test_audit_log.py  test_device_roster.py  test_ha_discovery.py  test_hardening.py  test_integration.py  test_mqtt_bridge.py  test_safety.py  test_td_loader.py  test_tool_compiler.py
