[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thingwire"
version = "0.2.0"
description = "AI-to-hardware gateway. WoT Thing Description to MCP tools."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.34.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
thingwire = "thingwire.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/thingwire"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
